# Sim2Real-5DOF-Arm

./: .gitignore  README.md
CAD_SolidWorks/5-dof-robotic-arm -for-matlab-test/: ARM 1.SLDPRT  ARM 3.SLDPRT  Bolt 1.SLDPRT  Bolt 2.SLDPRT  GRIPPER Assembly.SLDASM  GRIPPER Base.SLDPRT  GRIPPER Link 1.SLDPRT  Gear 2.SLDPRT  Part 3.SLDPRT  Part 4.SLDPRT  Part 5.SLDPRT  Part2_edit.SLDPRT  Robotic Arm - ARM 1-2.STL  Robotic Arm - ARM 2-1.STL  Robotic Arm - Base-1.STL  Robotic Arm - Bolt 1-1.STL  Robotic Arm - Bolt 1-2.STL  Robotic Arm - Bolt 2-1.STL  Robotic Arm - Bolt 2-10.STL  Robotic Arm - Bolt 2-15.STL  Robotic Arm - Bolt 2-18.STL  Robotic Arm - Bolt 2-22.STL  Robotic Arm - Bolt 2-23.STL  Robotic Arm - Bolt 2-4.STL  Robotic Arm - Bolt 2-5.STL  (+22 more)
MATLAB_Simscape/: ARM 1_Default_sldprt.STEP  ARM 2_Default_sldprt.STEP  ARM 3_Default_sldprt.STEP  Base_Default_sldprt.STEP  Bolt 1_Default_sldprt.STEP  Bolt 2_Default_sldprt.STEP  GRIPPER 1_Default_sldprt.STEP  GRIPPER Assembly_Default_sldprt.STEP  GRIPPER Base_Default_sldprt.STEP  GRIPPER Link 1_Default_sldprt.STEP  Gear 1_Default_sldprt.STEP  Gear 2_Default_sldprt.STEP  MainRoboticArm_Enhanced.slx  MainRoboticArm_Enhanced.xml  MainRoboticArm_Enhanced_DataFile.m  MainRoboticArm_Enhanced_DataFile1.m  MainRoboticArm_Enhanced_DataFile2.m  MainRoboticArm_Enhanced_DataFile3.m  MainRoboticArm_Enhanced_ForwardInverse_K.slx  MainRoboticArm_Enhanced_error.txt  Part 3_Default_sldprt.STEP  Part 4_Default_sldprt.STEP  RidBodyTree.m  RoboticArm_Enhanced_DataFile.m  angles_to_sim_and_arduino.m  arduino_side.slx  end_effector_Default_sldprt.STEP  link 2_Default_sldprt.STEP  link1_Default_sldprt.STEP  link2_Default_sldprt.STEP  link3_Default_sldprt.STEP  link4_Default_sldprt.STEP  link5_Default_sldprt.STEP  link_Default_sldprt.STEP  waist_Default_sldprt.STEP
ROS2_Workspace/robot_arm_uni/src/robotic_arm_app/: CMakeLists.txt  package.xml
ROS2_Workspace/robot_arm_uni/src/robotic_arm_app/launch/: draw_rectangle.launch.py  voice_control.launch.py
ROS2_Workspace/robot_arm_uni/src/robotic_arm_app/robotic_arm_app/: servo_logger.py  voice_commander.py  voice_to_moveit.py
ROS2_Workspace/robot_arm_uni/src/robotic_arm_app/src/: box_gripper.cpp  draw_rectangle.cpp  moveit_interface.cpp
(+108 files in other folders)
